--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
   <link rel="shortcut icon" href="https://www.veeam.com/favicon.ico" type="image/x-icon">
 
-  <link rel="stylesheet" href="http://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/css/just-the-docs.css">
+  <link rel="stylesheet" href="https://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/css/just-the-docs.css">
 
   {% if site.ga_tracking != nil %}
     <script>
@@ -24,9 +24,9 @@
   {% endif %}
 
   {% if site.search_enabled != nil %}
-    <script type="text/javascript" src="http://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/js/vendor/lunr.min.js"></script>
+    <script type="text/javascript" src="https://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/js/vendor/lunr.min.js"></script>
   {% endif %}
-  <script type="text/javascript" src="http://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/js/just-the-docs.js"></script>
+  <script type="text/javascript" src="https://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
