Restoring original code from read_the_docs
Using the original code from read_the_docs repo instead of hardwired URLs to hopefully fix search on pages created from this remote theme.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,10 +23,10 @@
     <script async src="https://www.google-analytics.com/analytics.js"></script>
   {% endif %}
 
-  {% if site.search_enabled != nil %}
-    <script type="text/javascript" src="https://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/js/vendor/lunr.min.js"></script>
+  {% if site.search_enabled != false %}
+    <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | absolute_url }}"></script>
   {% endif %}
-  <script type="text/javascript" src="https://veeambestpractise.github.io/Veeam_Jekyll_theme/assets/js/just-the-docs.js"></script>
+  <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | absolute_url }}"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
