--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 
 <html lang="{{ site.lang | default: "en-US" }}">
 {% include head.html %}
+{% include google_analytics.html %}
 
 <body>
 
@@ -15,7 +16,7 @@
       <button class="c-hamburger js-hamburger js-main-nav-trigger">
         <span>menu</span>
       </button>
-    
+
 
 
       <div class="navigation main-nav js-main-nav">
